react-app/src/index.css
/* TODO Add site wide styles */
body {
  position: relative;
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', sans-serif;
  min-height: 100vh;
  font-size: 1.1rem;
}

/* custom css variables */
:root {
  /* ----- colors ----- */
  --primary-color: rgb(14, 119, 189);
  --primary-color-light: rgb(32, 156, 238);
  --primary-color-xlight: rgb(249, 252, 255);
  --secondary-color: rgb(238, 114, 32);
  --secondary-color-light: rgb(242, 150, 88);
  --tertiary-color: rgb(138, 138, 138);
  --tertiary-color-light: rgb(245, 245, 245);
  --delete-color: rgb(173, 0, 0);
  --delete-color-light: rgb(230, 0, 0);

  /* ----- borders ----- */
  --primary-border: var(--primary-color) solid 1px;
  --pimrary-radius: 0.5rem;
  --tertiary-border: var(--tertiary-color) solid 1px;
  --delete-border: var(--delete-color) solid 1px;

  /* text shadow for bold */
  --text-shadow: 0.5px 0 #000;
}

/* reset css */
button {
  background: none;
  border: none;
  padding: 0;
  color: inherit;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
}

a {
  text-decoration: inherit;
  color: inherit;
}

*:focus {
  outline: none;
}

/* ul {
  margin-block-start: 0;
  padding-inline-start: 0;
} */

li {
  list-style: none;
}

/* for app.js */
.btwn-nav-footer {
  padding: 0 10%;
  margin-top: 0.5rem;
  padding-bottom: 3rem;
}

.load-not-found-invalid {
  color: rgb(122, 122, 122);
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  animation: pulse 2s infinite;
}

@keyframes pulse {
  0% {
    transform: scale(0.9);
  }

  70% {
    transform: scale(1.1);
  }

  100% {
    transform: scale(0.9);
  }
}

/* GLOBAL CLASSES */

.site__page {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.site__sub-section {
  display: flex;
  align-items: center;
  justify-content: center;
  border: var(--tertiary-border);
  border-radius: var(--pimrary-radius);
  background-color: var(--primary-color-xlight);
  padding: 1rem;
  box-sizing: border-box;
  width: 47rem;
  max-width: 100%;
  min-height: 14rem;
}

.site__sub-section__data {
  font-weight: 1000;
  padding: 0 1rem;
  width: 100%;
  text-shadow: var(--text-shadow);
}

@media (max-width: 800px) {
  .site__sub-section {
    flex-direction: column;
  }
  .site__sub-section__data {
    text-align: center;
  }
}

/* --------------- buttons --------------- */

button:not(.nav__item) {
  display: flex;
  justify-content: center;
  font-weight: 1000;
  padding: 0.5rem;
  font-size: 1.1rem;
  margin: 0.5rem;
  width: 100%;
  max-width: 11rem;
}

button:hover:enabled:not(.nav__item) {
  box-shadow: 2px 2px 4px rgb(0, 0, 0, 0.3);
  transform: translateY(-0.75px);
}

button:active:enabled:not(.nav__item) {
  box-shadow: none;
  transform: translateY(0.75px);
}

button:disabled:not(.nav__item) {
  cursor: default !important;
}

.primary-button {
  color: rgb(255, 255, 255);
  background-color: var(--primary-color);
  border: var(--primary-color) 1px solid;
  border-radius: var(--pimrary-radius);
}

.primary-button:hover:enabled {
  background-color: var(--primary-color-light);
  border-color: var(--primary-color-light);
}

.primary-button:active:enabled {
  background-color: var(--primary-color);
  border-color: var(--primary-color);
}

.primary-button:disabled {
  background-color: var(--tertiary-color-light);
  border: var(--tertiary-color) 1px solid;
  color: var(--tertiary-color);
}

.secondary-button {
  color: var(--primary-color);
  border: var(--primary-border);
  background-color: rgb(255, 255, 255);
  border-radius: var(--pimrary-radius);
}

.secondary-button:hover {
  color: var(--primary-color-light);
  border-color: var(--primary-color-light);
}

.secondary-button:active {
  color: var(--primary-color);
  border-color: var(--primary-color);
}

.delete-button {
  color: var(--delete-color);
  border: var(--delete-border);
  background-color: rgb(255, 255, 255);
  border-radius: var(--pimrary-radius);
}

.delete-button:hover {
  color: var(--delete-color-light);
  border-color: var(--delete-color-light);
}

.delete-button:focus {
  color: var(--delete-color);
  border-color: var(--delete-color);
}

/* --------------- titles --------------- */
.primary-title {
  color: var(--primary-color);
  text-align: center;
}

.secondary-title {
  color: var(--secondary-color);
  text-align: center;
}

.tertiary-title {
  color: var(--tertiary-color);
  text-align: center;
}

/* --------------- Forms --------------- */
.form-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.form {
  display: flex;
  align-items: center;
  flex-direction: row;
  width: 100%;
  justify-content: space-around;
}

@media (max-width: 800px) {
  .form {
    flex-direction: column !important;
  }
}

.form__row {
  display: flex;
  justify-content: center;
  flex-wrap: nowrap;
  width: 100%;
}

@media (max-width: 800px) {
  .form__row {
    flex-wrap: wrap;
  }
}

.form__input {
  width: 100%;
  margin: 0.5rem;
  padding: 0.5rem;
  border-radius: var(--pimrary-radius);
  border: var(--tertiary-border);
  font-size: 1.1rem;
  box-sizing: border-box;
}

.form__input:focus,
.form__input:focus-within {
  background-color: var(--tertiary-color-light);
  border: var(--primary-color) solid 1px;
}

.form__button {
  margin-top: 0.75rem;
  width: 50%;
}

.errors-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: rgb(255, 83, 83);
  text-shadow: none;
}

/* other */

.one1rem-ht {
  height: 1rem;
}

